Change input min-width to ensure visibility
40px seems to work for up to three digit numbers

--- a/src/app/ui/figures/character/dialogs/character-sheet.scss
+++ b/src/app/ui/figures/character/dialogs/character-sheet.scss
@@ -324,7 +324,7 @@
 
           input {
             width: auto;
-            min-width: 0;
+            min-width: 40px;
           }
 
           .button,
